--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -1,10 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
+   <ion-item lines="none">
     <ion-title>Select Location</ion-title>
     <ion-buttons slot="start">
       <ion-icon class="larger-back-button" name="arrow-back" (click)="dismissModal()"></ion-icon>
     </ion-buttons>
+   </ion-item>
   </ion-toolbar>
 </ion-header>
 
