--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
@@ -1,12 +1,9 @@
 <ion-header>
   <ion-toolbar>
-      <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
+    <ion-item lines="none">
+        <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
     <ion-title>View Exercises</ion-title>
-
-<!--      <ion-buttons slot="end">-->
-<!--      <ion-button (click)="dismissModal()">Close</ion-button>-->
-<!--    </ion-buttons>-->
-
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
