--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
@@ -1,7 +1,3 @@
-// .grid-content {
-//   height: inherit;
-// }
-
 ion-button {
   margin-top: 15px;
 }
@@ -27,11 +23,12 @@ ion-button {
     width: 100%;
     .location {
       padding-right: 0px;
+      --padding-end: 0px;
     }
   }
   .icon {
     display: flex;
-    align-items: center;
+    align-items: start;
     ion-icon {
       margin-left: 0px;
     }
