--- a/src/app/pages/healthdata/healthdata.page.scss
+++ b/src/app/pages/healthdata/healthdata.page.scss
@@ -19,88 +19,64 @@
   animation: beat 0.5s infinite;
 }
 
-.larger-back-button{
-    --padding-start: 12px; 
-    --padding-end: 12px; 
-    font-size: 24px; 
-}
-
-* {
-    font-family: 'Montserrat', sans-serif;
-}
-
 .customlabel{
   margin-top: 5%;
   font-size: 1.2rem;
 }
 
-ion-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.health-icon {
+  font-size: 10rem;
+  color: #E63946;
+  margin: 4rem 0 1rem;
+}
+
+.subtext {
+  text-align: center;
+}
+
+.submit{
+  margin-top: 15px;
+  --background: #E63946;
+  --color: white;
+  --border: none;
+  --border-style: solid;
+  --border-width: 2px;
+  --border-color: #E63946;
+}
+
+.cont{
+  height: 200px;
+  width: 100%;
+}
+
+.full-width {
+  width: 100%;
+}
   
-  .health-icon {
-    font-size: 10rem;
-    color: #E63946;
-    margin: 4rem 0 1rem;
-  }
-  
-  .subtext {
-    text-align: center;
-    margin-bottom: 2rem;
-    align-self: center;
-    width: 100%;
-    padding-left: 0.6rem;
-  }
+.input-field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  align-self: center;
+  width: 100%;
+}
 
-  .centered {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 2rem 0 1rem;
-  }
+.icon-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}  
 
-  .submit{
-    margin-top: 5%;
-    --background: #E63946;
-    --color: white;
-    width: 30%;
-    height: 50px;
-    --border: 0;
-  }
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 
-  .cont{
-    height: 200px;
-    width: 100%;
-  }
-
-  .full-width {
-    width: 100%;
-  }
-    
-  .input-field {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    align-self: center;
-    width: 100%;
-  }
-
-  .icon-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }  
-
-  .spinner-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
+ion-item {
+  --padding-start: 0px;
+}
   
   
