--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -56,7 +56,7 @@
               <ion-card-title>
                 <ion-icon name="analytics"></ion-icon>
               </ion-card-title>
-              <h2>Personal Best</h2>
+              <h2>Perfomance</h2>
             </ion-card-content>
           </ion-card>
         </swiper-slide>
