--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -96,7 +96,7 @@
                   <ion-card-title>
                     <ion-icon name="receipt"></ion-icon>
                   </ion-card-title>
-                  0 Sessions Completed
+                  {{sessionsCompleted + " Sessions Completed"}}
                 </ion-card-content>
               </ion-card>
             </ion-col>
