--- a/src/app/pages/otheruser/schedule-content/schedule-content.component.scss
+++ b/src/app/pages/otheruser/schedule-content/schedule-content.component.scss
@@ -8,6 +8,11 @@ ion-button {
     --border-color: #E63946;
 }
 
+ion-card {
+    margin: 8px;
+    border-radius: 2px;
+}
+
 .schedule-value {
     margin-left: 10px;
 }
