--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.scss
@@ -28,9 +28,9 @@ ion-button {
   }
   .icon {
     display: flex;
-    align-items: start;
+    align-items: center;
     ion-icon {
-      margin-left: 0px;
+      margin-right: 8px;
     }
   }
 }
