--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.scss
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.scss
@@ -21,9 +21,9 @@
     }
     .icon {
       display: flex;
-      align-items: start;
+      align-items: center;
       ion-icon {
-        margin-left: 0px;
+        margin-right: 8px;
       }
     }
   }
