--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -9,23 +9,13 @@
 
 <ion-content>
   <ion-card style="background-color: #A8DADC; padding: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <ion-card-title>Add Personal best</ion-card-title>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <ion-card>
-                    <ion-img src="../../../assets/goalsBanner.jpg"></ion-img>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <ion-card-title>Add Personal best</ion-card-title>
+      <ion-card-content>
+          <ion-img src="../../../assets/goalsBanner.jpg"></ion-img>
+      </ion-card-content>
   </ion-card>
 
-  <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" >
+  <form [formGroup]="PersonalBestForm" (ngSubmit)="onSubmit()" class="ion-padding">
     <ion-item>
       <ion-label>Select Exercise</ion-label>
       <ion-select formControlName="exercise" placeholder="EXERCISE">
@@ -54,7 +44,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-label position="stacked" style="font-size: x-large">Location</ion-label>
+      <ion-label position="stacked">Location</ion-label>
       <div class="wrapper">
         <div class="input">
           <ion-input type="text" formControlName="location" [placeholder]="myVariable" class="location"></ion-input>
@@ -69,6 +59,6 @@
       <ion-label position="stacked">Notes</ion-label>
       <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>
     </ion-item>
-    <ion-button type="submit" expand="block" [disabled]="!isValid(PersonalBestForm.value)"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
+    <ion-button type="submit" class="submit-button" expand="block" [disabled]="!isValid(PersonalBestForm.value)"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
   </form>
 </ion-content>
