--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -43,7 +43,7 @@
     <ion-item class="progress-label" lines="none">
       <ion-label>{{timeLeft()}}</ion-label>
       <ion-icon name="checkmark-done-outline" slot="end" [ngClass]="{'active': joined(), 'inactive': !joined()}"></ion-icon>
-      <ion-icon name="add-circle" slot="end" [id]="id" class="add-icon"></ion-icon>
+      <!-- <ion-icon name="add-circle" slot="end" [id]="id" class="add-icon"></ion-icon> -->
     </ion-item>
     <ion-progress-bar [value]="ratio"></ion-progress-bar>
   </div>
@@ -56,12 +56,10 @@
         <ion-buttons slot="start">
           <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button>
         </ion-buttons>
-        <!-- <ion-button slot="start" fill="outline" (click)="modal.dismiss()">Cancel</ion-button> -->
         <ion-title class="add-friends-title">{{"Select Friends"}}</ion-title>
         <ion-buttons slot="end">
           <ion-button fill="outline" (click)="confirmSelection()">Confirm</ion-button>
         </ion-buttons>
-        <!-- <ion-button slot="end" fill="outline" (click)="confirmSelection()">Confirm</ion-button> -->
       </ion-toolbar>
     </ion-header>
     <ion-content>
