--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -14,9 +14,9 @@
         </ion-label> 
       </ion-chip>
     </ion-title>
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-icon name="ellipsis-vertical-outline" id="trigger"></ion-icon>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-popover trigger="trigger" triggerAction="click">
       <ng-template>
         <ion-item lines="none">
