--- a/src/app/pages/groups/group-home-page/group-home-page.component.scss
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.scss
@@ -23,6 +23,7 @@
 ion-label div, .profile-img-container  {
     width: fit-content;
     margin: auto;
+    text-align: center;
 }
 
 .larger-back-button {
