Exercise isntruction progress

--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
@@ -26,7 +26,7 @@
         </ion-card-content>
         <!-- Open new page when the button is clicked -->
 
-        <ion-button redirect  >View Instructions</ion-button>
+        <ion-button (click)="openModal(ExerciseTuple)"  >View Instructions</ion-button>
     </ion-card>
 </ion-content>
 
