--- a/src/app/pages/exercise-explorer/instruction-modal/instruction-modal.component.scss
+++ b/src/app/pages/exercise-explorer/instruction-modal/instruction-modal.component.scss
@@ -1,12 +1,12 @@
-/* Add this CSS to your component's SCSS file or global CSS file */
 .circle {
-  width: 30px; /* Adjust the width and height to your desired size */
+  width: 30px;
   height: 30px;
-  background-color: #3daad7; /* Change the background color as needed */
+  background-color: #3daad7;
   color: white;
-  border-radius: 50%; /* Makes the div a circle */
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
+  margin: 0 auto;
 }
