dashboard UI fixes/improvements

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -91,7 +91,7 @@
 
           <ion-row>
             <ion-col size="12">
-              <ion-card class="grid-cards">
+              <ion-card class="grid-cards" routerLink="/workout-scheduling">
                 <ion-card-content>
                   <ion-card-title>
                     <ion-icon name="receipt"></ion-icon>
@@ -147,7 +147,7 @@
                 <ion-card class="discover-card" routerLink="/home/search">
                  <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="barbell-outline"></ion-icon>
+                    <ion-icon name="body-outline"></ion-icon>
                   </ion-card-title>
                  People
                  </ion-card-content>
