fitness goal view UI improvement

--- a/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
+++ b/src/app/pages/fitnessgoal-view/fitnessgoal-view.page.html
@@ -11,10 +11,10 @@
 <ion-content>
 
     <ion-card class="goal-name" >
-        <ion-card-title style="padding-left: 10px">
+        <ion-card-title style="padding-left: 15px; padding-top: 15px">
                     {{goalName}}
         </ion-card-title>
-        <ion-card-subtitle style="padding-left: 10px">
+        <ion-card-subtitle style="padding-left: 15px">
                     {{goalDesc}}
         </ion-card-subtitle>
         <ion-card-content>
