--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -16,7 +16,7 @@
           <h1>{{user!.displayName}}</h1>
         </div>
         <div class="bio">
-          <p>{{user.bio}}.</p>
+          <p>{{user.bio}}</p>
         </div>
       </ion-label>
       <div class="group-buttons">
