edit schedule and add pb UI fix

--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-card style="background-color: #A8DADC; padding: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
-    <ion-card-title>Add Personal best</ion-card-title>
+    <ion-card-title style="padding-top: 10px;">Add Personal best</ion-card-title>
       <ion-card-content>
           <ion-img src="../../../assets/goalsBanner.jpg"></ion-img>
       </ion-card-content>
