goal view UI fix

--- a/src/app/pages/goalview/goalview.page.html
+++ b/src/app/pages/goalview/goalview.page.html
@@ -16,11 +16,11 @@
     <ion-card>
       <ion-item>
         <ion-label position="stacked"><h2>Name</h2></ion-label>
-        <ion-input type="text" placeholder="name your goal" formControlName="name"></ion-input>
+        <ion-input type="text" placeholder="Name your goal" formControlName="name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked"><h2>Description</h2></ion-label>
-        <ion-input type="text" placeholder="describe goal" formControlName="description"></ion-input>
+        <ion-input type="text" placeholder="Describe your goal" formControlName="description"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked"><h2>Start date</h2></ion-label>
