dashboard UI improvement

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -9,12 +9,12 @@
           <swiper-slide>
             <ion-card routerLink="/workout-scheduling">
               <ion-card-content>
-                <ion-card-title>
+                <ion-card-title style="text-align: center;">
                   <ion-icon name="receipt-outline"></ion-icon>
                 </ion-card-title>
                <ion-item lines="none">
-                <ion-text>Sessions</ion-text>
-                <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                <ion-text style="text-align: center; margin: 0 auto;">Sessions</ion-text>
+                <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                </ion-item>
               </ion-card-content>
             </ion-card>
@@ -22,12 +22,12 @@
           <swiper-slide>
             <ion-card routerLink="/fitnessgoals">
               <ion-card-content>
-                <ion-card-title>
+                <ion-card-title style="text-align: center;">
                   <ion-icon name="american-football-outline"></ion-icon>
                 </ion-card-title>
                <ion-item lines="none">
-                <ion-text>Goals</ion-text>
-                <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                <ion-text style="text-align: center; margin: 0 auto;">Goals</ion-text>
+                <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                </ion-item>
               </ion-card-content>
             </ion-card>
@@ -35,12 +35,12 @@
           <swiper-slide>
             <ion-card routerLink="/home/leaderboard">
               <ion-card-content>
-                <ion-card-title>
+                <ion-card-title style="text-align: center;">
                   <ion-icon name="bar-chart-outline"></ion-icon>
                 </ion-card-title>
-                <ion-item lines="none">
-                  <ion-text>Rank</ion-text>
-                  <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                <ion-item lines="none" >
+                  <ion-text style="text-align: center; margin: 0 auto;">Rank</ion-text>
+                  <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                  </ion-item>
               </ion-card-content>
             </ion-card>
@@ -48,12 +48,12 @@
           <swiper-slide>
             <ion-card routerLink="/view-personalbests">
               <ion-card-content>
-                <ion-card-title>
+                <ion-card-title style="text-align: center;">
                   <ion-icon name="analytics-outline"></ion-icon>
                 </ion-card-title>
                 <ion-item lines="none">
-                  Performance
-                  <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                  <ion-text style="text-align: center;  margin: 0 auto;">Bests</ion-text>
+                  <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                  </ion-item>
               </ion-card-content>
             </ion-card>
