--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -14,7 +14,7 @@
                 </ion-card-title>
                <ion-item lines="none">
                 <ion-text style="text-align: center; margin: 0 auto;">Sessions</ion-text>
-                <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                </ion-item>
               </ion-card-content>
             </ion-card>
@@ -27,7 +27,7 @@
                 </ion-card-title>
                <ion-item lines="none">
                 <ion-text style="text-align: center; margin: 0 auto;">Goals</ion-text>
-                <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                </ion-item>
               </ion-card-content>
             </ion-card>
@@ -40,7 +40,7 @@
                 </ion-card-title>
                 <ion-item lines="none" >
                   <ion-text style="text-align: center; margin: 0 auto;">Rank</ion-text>
-                  <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                  <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                  </ion-item>
               </ion-card-content>
             </ion-card>
@@ -53,7 +53,7 @@
                 </ion-card-title>
                 <ion-item lines="none">
                   <ion-text style="text-align: center;  margin: 0 auto;">Bests</ion-text>
-                  <ion-icon name="chevron-forward" slot="end"></ion-icon>
+                  <!-- <ion-icon name="chevron-forward" slot="end"></ion-icon> -->
                  </ion-item>
               </ion-card-content>
             </ion-card>
