--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -9,7 +9,7 @@ ion-text {
     border-radius: 12px;
     border-end-end-radius: 0px;
     border-end-start-radius: 0px;
-    color: #457b9d; //  #1D3557
+    color: black; //  #1D3557
 }
 
 ion-card, ion-item {
