--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -155,7 +155,7 @@
               </ion-col>
             </ion-row>
             <ion-row>
-              <ion-col size="12">
+              <ion-col size="6">
                 <ion-card class="discover-card" routerLink="/exercise-explorer">
                  <ion-card-content>
                   <ion-card-title>
@@ -165,6 +165,16 @@
                  </ion-card-content>
                 </ion-card>
               </ion-col>
+                <ion-col size="6">
+                    <ion-card class="discover-card" routerLink="/calories-calculator">
+                        <ion-card-content>
+                            <ion-card-title>
+                                <ion-icon name="calculator-outline"></ion-icon>
+                            </ion-card-title>
+                            Calories Calculator
+                        </ion-card-content>
+                    </ion-card>
+                </ion-col>
             </ion-row>
           </ion-grid>
         </ion-card>
