Calories Calculator progress

--- a/src/app/pages/calories-calculator/calories-calculator.page.html
+++ b/src/app/pages/calories-calculator/calories-calculator.page.html
@@ -44,7 +44,7 @@
                     </ion-select>
                 </ion-item>
                 <ion-item lines="none">
-                    Calories
+                    <ion-label>Calories Consumption: {{calculateTargetCalories}}</ion-label>
                 </ion-item>
 
                 <ion-button>Calculate</ion-button>
