--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -21,7 +21,7 @@
           <ion-icon name="close-circle-outline"  ></ion-icon>
         </ion-button>
       </div>
-      <ion-card-content style="display:flex ; align-items:center" >
+      <div style="display:flex ; align-items:center" >
         <ion-avatar slot="start">
           <img alt="Silhouette of a person's head" src={{notice.profileurl}} />
         </ion-avatar>
@@ -31,7 +31,7 @@
           </ion-row>  
           <ion-label class="Bcard">&nbsp;{{notice.message}}</ion-label>
         </ion-grid>
-      </ion-card-content>
+      </div>
       <div class="flex-center4" *ngIf="notice.message == 'Sent you a Friend Request!'">
         <ion-button color="success" size="small" (click)="addFriend(notice)">Accept</ion-button>
         <ion-button color="danger" size="small" (click)="clearNotification(notice.id!); rejectFriendRequest(notice , notice.senderid! , notice.senttoid!);">Reject</ion-button>
