--- a/src/app/directives/backbutton/backbutton.component.html
+++ b/src/app/directives/backbutton/backbutton.component.html
@@ -1,1 +1,3 @@
-<ion-icon name="arrow-back-outline" (click) ="back()" class="larger-back-button clickable"></ion-icon>
+<ion-button>
+    <ion-icon name="arrow-back-outline" (click) ="back()" class="larger-back-button clickable"></ion-icon>
+</ion-button>
