--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -1,6 +1,5 @@
 <ion-header>
   <ion-toolbar>
-   <ion-item lines="none">
     <ion-buttons slot="start">
       <backbutton (click)="removeSession()"></backbutton>
     </ion-buttons>
@@ -17,14 +16,13 @@
     <!-- <ion-buttons slot="end">
       <ion-icon name="ellipsis-vertical-outline" id="trigger"></ion-icon>
     </ion-buttons> -->
-    <ion-popover trigger="trigger" triggerAction="click">
+    <!-- <ion-popover trigger="trigger" triggerAction="click">
       <ng-template>
         <ion-item lines="none">
           clear chat
         </ion-item>
       </ng-template>
-    </ion-popover>
-   </ion-item>
+    </ion-popover> -->
   </ion-toolbar>
 </ion-header>
 
