--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item lines="none">
-      <backbutton></backbutton>
-      <ion-title>Workout Schedule</ion-title>
-    </ion-item>
+   <ion-buttons slot="start">
+    <backbutton></backbutton>
+   </ion-buttons>
+    <ion-title>Workout Schedule</ion-title>
   </ion-toolbar>
 </ion-header>
 
