backbutton spacing adjustment

--- a/src/app/directives/backbutton/backbutton.component.html
+++ b/src/app/directives/backbutton/backbutton.component.html
@@ -1,3 +1,5 @@
-<ion-button>
-    <ion-icon name="arrow-back-outline" (click) ="back()" class="larger-back-button clickable"></ion-icon>
-</ion-button>
+<ion-buttons slot="start">
+    <ion-button (click) ="back()" class="backbutton">
+        <ion-icon name="arrow-back-outline" class="larger-back-button clickable"></ion-icon>
+    </ion-button>
+</ion-buttons>
