--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -157,7 +157,7 @@ ion-footer{
     animation: ellipsis 0.75s infinite;
   }
 
-  .input-field-footer .message-input-field .input-field-container ion-textarea{
-    padding-top: 4%;
-  }
+  // .input-field-footer .message-input-field .input-field-container ion-textarea{
+  //   padding-top: 4%;
+  // }
   
