--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item lines="none">
-      <backbutton></backbutton>
-      <ion-title style="margin-left: 0rem;">Health Data</ion-title>
-    </ion-item>
+    <backbutton></backbutton>
+    <ion-title>Health Data</ion-title>
   </ion-toolbar>
 </ion-header>
 
