--- a/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
+++ b/src/app/pages/exercise-explorer/view-exercises/view-exercises.component.html
@@ -1,9 +1,9 @@
 <ion-header>
     <ion-toolbar>
-        <ion-item lines="none">
-            <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
-            <ion-title>View Exercises</ion-title>
-        </ion-item>
+        <ion-buttons slot="start">
+        <ion-icon name="arrow-back" aria-hidden="true" class="bb" slot="start" (click)="dismissModal()"></ion-icon>
+        </ion-buttons>
+        <ion-title>View Exercises</ion-title>
     </ion-toolbar>
 </ion-header>
 
