--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -43,8 +43,8 @@
     <div class="input-field-wrapper">
       <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     </div>
-    <ion-fab horizontal="end" *ngIf="isText()">
-      <ion-fab-button class="message-send-fab-button">
+    <ion-fab horizontal="end">
+      <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="isText()">
         <ion-icon name="send" (click)="sendMessage()" class="message-send-icon"></ion-icon>
       </ion-fab-button>
     </ion-fab>
