--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item lines="none">
-      <backbutton></backbutton>
-      <ion-title style="margin-left: 0rem;">Points</ion-title>
-    </ion-item>
+    <backbutton></backbutton>
+    <ion-title>Points</ion-title>
   </ion-toolbar>
 </ion-header>
 
