--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -3,7 +3,9 @@
     <div class="profile-outer-container">
       <div class="back-button">
         <ion-item lines="none">
-          <backbutton slot="start"></backbutton>
+          <ion-buttons slot="start">
+            <backbutton></backbutton>
+          </ion-buttons>
           <ion-icon name="create-outline" routerLink="/setprofile" slot="end" style="color: white !important;"></ion-icon>
         </ion-item>
       </div>
