--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <backbutton></backbutton>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+     </ion-buttons>
     <ion-title>Health Data</ion-title>
   </ion-toolbar>
 </ion-header>
