--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <backbutton class="larger-back-button"></backbutton>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+    </ion-buttons>
     <ion-title>Workout Schedule</ion-title>
   </ion-toolbar>
 </ion-header>
