--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -1,6 +1,8 @@
 <ion-header>
  <ion-toolbar>
-  <backbutton></backbutton>
+  <ion-buttons slot="start">
+    <backbutton></backbutton>
+  </ion-buttons>
   <ion-title *ngIf="name$ | async as usersName;">{{usersName}}</ion-title>
  </ion-toolbar>
 </ion-header>
