--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <backbutton></backbutton>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+    </ion-buttons>
     <ion-title>Points</ion-title>
   </ion-toolbar>
 </ion-header>
