--- a/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
+++ b/src/app/pages/view-personalbests/add-personal-best/add-personal-best.component.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <backbutton></backbutton>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+    </ion-buttons>
     <ion-title>Personal best</ion-title>
   </ion-toolbar>
 </ion-header>
