--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <backbutton></backbutton>
+    <ion-buttons slot="start">
+      <backbutton></backbutton>
+    </ion-buttons>
     <ion-title>Add Gym Session</ion-title>
   </ion-toolbar>
 </ion-header>
