input field fix

--- a/src/app/pages/chatbot/chatbot.page.scss
+++ b/src/app/pages/chatbot/chatbot.page.scss
@@ -87,16 +87,16 @@ ion-footer{
     filter: none;
   }
 
-  .input-field-container {
-    display: flex;
-    align-items: center;
-    flex: 1; 
-  }
+  // .input-field-container {
+  //   display: flex;
+  //   align-items: center;
+  //   flex: 1; 
+  // }
   
-  .message-input-field {
-    margin-right: 10px; 
-    flex: 1; 
-  }
+  // .message-input-field {
+  //   margin-right: 10px; 
+  //   flex: 1; 
+  // }
     
   .typing-indicator{
     background-color: #e2e6e9; 
