--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -19,11 +19,14 @@
 
 <ion-footer class="input-field-footer">
   <ion-item lines="none" class="message-input-field">
-    <div class="input-field-container">
-      <ion-textarea placeholder="Enter your Question" [(ngModel)]="userMessage"></ion-textarea>
+    <div class="input-field-container input-field-wrapper">
+      <ion-textarea [autoGrow]="true" placeholder="Enter your Question" [(ngModel)]="userMessage"></ion-textarea>
     </div>
-    <ion-fab-button class="message-send-fab-button custom-icon-color" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendUserMessage()">
-      <ion-icon name="send"></ion-icon>
-    </ion-fab-button>
+
+    <ion-fab horizontal="end" vertical ="bottom">
+      <ion-fab-button class="message-send-fab-button custom-icon-color" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendUserMessage()">
+        <ion-icon name="send"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </ion-item>
 </ion-footer>
