--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -40,9 +40,9 @@
 <ion-footer class="input-field-footer">
   <ion-item lines="none" class="message-input-field">
     <div class="input-field-wrapper">
-      <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
+      <ion-textarea  placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     </div>
-    <ion-fab horizontal="end">
+    <ion-fab horizontal="end" vertical ="bottom">
       <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()">
         <ion-icon name="send" (click)="sendMessage()" class="message-send-icon"></ion-icon>
       </ion-fab-button>
