--- a/src/app/pages/messages/create-group/create-group.component.html
+++ b/src/app/pages/messages/create-group/create-group.component.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-item lines="none">
-      <backbutton></backbutton>
+      <ion-buttons slot="start">
+        <backbutton></backbutton>
+      </ion-buttons>
       <ion-title>
         Create a new group
       </ion-title>
