--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -10,7 +10,7 @@
 
       <ion-list class="messages-list" class="transparent-list">
         <div [hidden]="selectedSegment!=='chats'">
-          <div *ngIf="chatFriends.length !== 0; else loaderContent" class="chatFriends-container">
+          <div *ngIf="!loading; else loaderContent" class="chatFriends-container">
             <ion-item *ngFor="let chatFriend of chatFriends" (click)="stageUser(chatFriend.user)" lines="none" class="transparent-item">
               <ion-avatar slot="start" class="user-profile-img">
                 <img alt="Silhouette of a person's head" [src]="chatFriend.user.profileURL!" />
@@ -25,6 +25,15 @@
                 <p class="last-message">{{"~ " + chatFriend.lastChat!.text }}</p>
               </ion-label>
             </ion-item>
+
+            <div class="zero-content-container" *ngIf="chatFriends.length === 0">
+              <div class="inner-zero-content-wrapper">
+                <ion-icon class="large-icon" name="people"></ion-icon><br>
+                <ion-text>
+                  You don't have any friends at the moment. You need to make new friends in order to begin chatting.
+                </ion-text>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -40,6 +49,15 @@
               </div>
             </ion-label>
           </ion-item>
+
+          <div class="zero-content-container" *ngIf="groups.length === 0">
+            <div class="inner-zero-content-wrapper">
+              <ion-icon class="large-icon" name="people"></ion-icon><br>
+              <ion-text>
+                You don't have any groups at the moment. You can either create a new group or search for a new group and join.
+              </ion-text>
+            </div>
+          </div>
         </div>
       </ion-list>
    </div>
@@ -71,6 +89,20 @@
               <p>{{friend.bio}}</p>
             </ion-label>
           </ion-item>
+
+          <div *ngIf="friends.length === 0" class="zero-content-container ">
+            <div class="inner-zero-content-wrapper">
+              <ion-icon class="large-icon" name="people"></ion-icon><br>
+              <ion-text>
+                You don't have any friends at the moment. You need to make new friends in order to begin chatting.
+              </ion-text><br><br>
+              <ion-buttons class="add-buttons">
+                <ion-button routerLink="/home/search" (click)="modal.dismiss()">
+                  <ion-icon class="add-friend" name="person-add"></ion-icon> Find Friends
+                </ion-button>
+              </ion-buttons>
+            </div>
+          </div>
         </ion-list>
       </ion-content>
     </ng-template>
