--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -13,6 +13,11 @@
         </ion-label>
       </ion-chip>
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button class="default-button">
+        <ion-icon name="ellipsis-vertical"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
