--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -13,9 +13,11 @@
         </ion-label> 
       </ion-chip>
     </ion-title>
-    <!-- <ion-buttons slot="end">
-      <ion-icon name="ellipsis-vertical-outline" id="trigger"></ion-icon>
-    </ion-buttons> -->
+    <ion-buttons slot="end">
+      <ion-button class="default-button">
+        <ion-icon name="ellipsis-vertical" id="trigger"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <!-- <ion-popover trigger="trigger" triggerAction="click">
       <ng-template>
         <ion-item lines="none">
