--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -8,7 +8,7 @@
 
        <ion-buttons class="edit-button">
         <ion-button class="default-button"  routerLink="/setprofile" >
-          <ion-icon name="create-outline" style="color: white !important;"></ion-icon>
+          <ion-icon name="create-outline" class="larger-back-button"  style="color: white !important;"></ion-icon>
         </ion-button>
        </ion-buttons>
       </div>
